<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffffdff"
    tools:context=".cart.view.ShoppingCartFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/up_arrow"
            app:title="Shopping Cart"
            app:titleTextColor="@color/colorAccent" />


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingCartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="80dp"/>

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/empty_cart"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:elevation="15dp"
        android:padding="8dp"
        app:elevation="4dp"
        tools:targetApi="lollipop">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="bottom"

        android:background="@color/colorAccent"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/total"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:text="@string/zero_price"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_background"
            android:padding="10dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="19sp" />
    </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>