<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="1.5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:weightSum="1">


            <ImageView
                android:id="@+id/productImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="0.25"
                android:scaleType="fitXY"
                android:contentDescription="@string/product_image"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.75"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />


                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/deleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/delete_item"
                android:src="@drawable/ic_remove_shopping_cart"
                android:tint="@android:color/white"/>

            <TextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/round_background"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/addItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorAccent"
                android:contentDescription="@string/add_product"
                android:src="@drawable/ic_add_shopping"
                android:tint="@android:color/white"/>

            <ImageButton
                android:id="@+id/removeItem"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.25"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@android:drawable/ic_menu_delete"
                android:text="@string/remove_product"
                android:tint="@android:color/white"
                android:contentDescription="@string/remove_product"
                android:layout_marginStart="10dp" />


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

