<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="?attr/selectableItemBackground"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/productInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="19sp"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/removeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_remove_shopping_cart"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:tint="@android:color/white"
                android:contentDescription="@string/remove_product"/>

            <ImageButton
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:src="@drawable/ic_add_shopping"
                android:tint="@android:color/white"
                android:layout_weight="1"
                android:contentDescription="@string/add_product"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
